--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -1,1 +1,11 @@
 /* write your override styles here */
+#wall .tag-1 {
+    display: none;
+  }
+#wall + #tag-2 {
+    display: none;
+}
+/*          <div id="tag-2"></div>            */
+#wall #tag-3 {
+    display: none;
+}
